--- a/Client.fedex/Gridlock/src/app/grid/grid-square/grid-square.component.css
+++ b/Client.fedex/Gridlock/src/app/grid/grid-square/grid-square.component.css
@@ -1,6 +1,9 @@
 .square {
     width: 50px;
     height: 50px;
-    background-color: white;
+    background-color: lightgray;
     border: solid 1px black;
+    display: block;
+    float: left;
+    
 }
