--- a/Client.fedex/Gridlock/src/app/grid/grid-layout/grid-layout.component.html
+++ b/Client.fedex/Gridlock/src/app/grid/grid-layout/grid-layout.component.html
@@ -1,5 +1,7 @@
-<div *ngFor="let row of _grid; let r = index">
-  <div *ngFor="let col of _grid[r]; let c = index">
-    <app-grid-square></app-grid-square>
+<div class="grid-container">
+  <div class="tile-row" *ngFor="let row of _grid; let r = index">
+    <div class="tile-container" *ngFor="let col of _grid[r]; let c = index">
+      <app-grid-square></app-grid-square>
+    </div>
   </div>
 </div>
