--- a/Client.fedex/Gridlock/src/app/grid/grid-square/grid-square.component.less
+++ b/Client.fedex/Gridlock/src/app/grid/grid-square/grid-square.component.less
@@ -3,4 +3,11 @@
     height: 50px;
     background-color: white;
     border: solid 1px black;
+    background-image: url('/Assets.fedex/tile_01.png');
+    &.dirty {
+        
+    }
+    &.grassy {
+
+    }
 }
