adding layers to tiles

--- a/Client.fedex/Gridlock/src/app/grid/grid-square/grid-square.component.html
+++ b/Client.fedex/Gridlock/src/app/grid/grid-square/grid-square.component.html
@@ -1,3 +1,5 @@
 <div class="square">
-  <img src="./Assets.fedex/monster_01.png"/>
+    <img class="avatar-tile" src="./assets/avatar_01.png"/>
+    <img class="monster-tile" src="./assets/monster_01.png"/>
+    <img class="background-tile" src="./assets/land_01.png"/>
 </div>
