Added primeng and font-awesome to the project.
Also allowed the ability to select squares.

--- a/Client.fedex/Gridlock/src/app/grid/grid-layout/grid-layout.component.html
+++ b/Client.fedex/Gridlock/src/app/grid/grid-layout/grid-layout.component.html
@@ -1,3 +1,5 @@
+<p-contextMenu [global]="true" [model]="menuItems"></p-contextMenu>
+
 <div *ngFor="let row of _grid; let r = index">
   <div *ngFor="let col of _grid[r]; let c = index">
     <app-grid-square></app-grid-square>
