--- a/Client.fedex/Gridlock/src/app/grid/grid-square/grid-square.component.less
+++ b/Client.fedex/Gridlock/src/app/grid/grid-square/grid-square.component.less
@@ -5,5 +5,11 @@
     border: solid 1px black;
     display: block;
     float: left;
-    
+    &.hover {
+        background-color: lawngreen;
+    }
+    &.highlight {
+        background-color: darkblue;
+        border: solid 1px gold;
+   }
 }
