--- a/Client.fedex/Gridlock/src/app/grid/grid-square/grid-square.component.html
+++ b/Client.fedex/Gridlock/src/app/grid/grid-square/grid-square.component.html
@@ -1,5 +1,4 @@
 <div class="square">
-    <img class="avatar-tile" src="./assets/avatar_01.png"/>
-    <img class="monster-tile" src="./assets/monster_01.png"/>
+    <img class="character-tile" src="./assets/monster_01.png"/>
     <img class="background-tile" src="./assets/land_01.png"/>
 </div>
