--- a/Client.fedex/Gridlock/src/app/grid/grid-square/grid-square.component.less
+++ b/Client.fedex/Gridlock/src/app/grid/grid-square/grid-square.component.less
@@ -1,22 +1,17 @@
 .square {
-    width: 50px;
-    height: 50px;
-    background-color: white;
-    border: solid 1px black;
+    width: 80px;
+    height: 80px;
     position: relative; 
 
     img {
         width: 100%;
         height: auto;
         position: absolute;
-        &.avatar-tile {
-            z-index: 3;
-        }
-        &.monster-tile {
+        &.character-tile {
             z-index: 2;
         }
         &.background-tile {
-            z-index: a;
+            z-index: 1;
         }
     } 
 }
