--- a/Client.fedex/Gridlock/src/app/grid/grid-square/grid-square.component.less
+++ b/Client.fedex/Gridlock/src/app/grid/grid-square/grid-square.component.less
@@ -6,11 +6,12 @@
     position: relative; 
 
     &.hover {
-        background-color: lawngreen;
+        border: solid 1px gold;
+        background-color:  darkblue;
     }
     &.highlight {
-        background-color: darkblue;
-        border: solid 1px gold;
+        border: solid 1px white;
+        background-color: black;
    } 
    
     img {
