--- a/Client.fedex/Gridlock/src/app/grid/grid-square/grid-square.component.less
+++ b/Client.fedex/Gridlock/src/app/grid/grid-square/grid-square.component.less
@@ -1,21 +1,29 @@
+@borderWidth: 2px;
+
 .square {
-    width: 80px;
-    height: 80px;
-    position: relative; 
+    width: 80px - (2 * @borderWidth);
+    height: 80px - (2 * @borderWidth);
+    position: relative;
+    background-color: ghostwhite;
+    border: solid @borderWidth darken(ghostwhite, 1%);
 
     &.hover {
-        border: solid 1px gold;
-        background-color:  darkblue;
+        border: solid @borderWidth darken(#d1d1ff, 3%);
+        background-color:  #d1d1ff;
+        cursor: pointer;
     }
     &.highlight {
-        border: solid 1px white;
-        background-color: black;
+        border: solid @borderWidth lighten(#4a4a4a, 3%);
+        background-color: #4a4a4a;
    } 
    
     img {
-        width: 100%;
+        width: calc(100% + (2 * @borderWidth));
         height: auto;
         position: absolute;
+        top: -1 * @borderWidth;
+        left: -1 * @borderWidth;
+
         &.character-tile {
             z-index: 2;
         }
