--- a/Client.fedex/Gridlock/src/app/grid/grid-square/grid-square.component.less
+++ b/Client.fedex/Gridlock/src/app/grid/grid-square/grid-square.component.less
@@ -30,5 +30,9 @@
         &.background-tile {
             z-index: 1;
         }
+        &.overlay {
+            background-color: darkblue;
+            border: solid 1px darkblue;
+        }
     }
 }
